[package]
name = "edgeforge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
bincode = "1.3"
futures = "0.3"
mdns-sd = "0.11"
postcard = { version = "1.0", features = ["alloc"] }
prometheus = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
slog-async = "2.8"
slog-term = "2.9"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
tract-core = "0.22"

[dev-dependencies]
cargo-fuzz = "0.12"
loom = "0.7"
proptest = "1.4"
tokio-test = "0.4"

